2001-02-22  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/NSBundle.h: Added three new localization
	macros: _(), __() and NSLocalizedStaticString ().
	
2001-02-22  Nicola Pero  <n.pero@mi.flashnet.it>

	* Resources/Languages/Italian: New file.
	* Resources/GNUmakefile (LANGUAGES): Added Italian.
	
2001-02-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fixes to prevent problems obtaining
	languages array due to attempts to use partially constructed
	standard user defaults object.

2001-02-21  Adam Fedor  <fedor@gnu.org>

	* Documenation/install.texi: Update.
	* Documenation/news.texi: Likewise.
	* INSTALL, NEWS: Regen.

2001-02-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix memory leak reported by thoran@free.fr
	parsePlItem()

2001-02-17  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/GNUmakefile (PACKAGE_NAME): Fixed typo - was gnutep-base
	rather than gnustep-base.

2001-02-20  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/GSXML.m|.h ([GSXMLAttribute -ns]): get attribute namespace.

2001-02-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSLocale.m: Tidy, defined __USE_GNU to get YESSTR and NOSTR
	on later versions of glibc.
	* Source/NSString.m: Log more info when parsing a property list fails.

2001-02-13  Adam Fedor  <fedor@gnu.org>

	* Version: 0.9.1

	* configure.in: Fix test for stdint.h

2001-02-11  Manuel Guesdon <mguesdon@orange-concept.com>

	* GSXML.m: testing lib!=NULL and string!=NULL before doing something in 
                -GSXMLNode content
                -GSXMLNode name
                -GSXMLNode ns
                -GSXMLNode nsDef
	* NSString.m: handle NULL bytes in -initWithUTF8String:
	(Treat it as zero length string and NSDebugMLog a warning).

2001-02-09  Jonathan Gapen  <jagapen@home.com>

	More FreeBSD build fixes:
	* acconfig.h: Add recent definitions.
	* configure.in: Add test for wchar.h header.
	* configure: Regenerate.