@@ -1,3 +1,8 @@
+2001-02-23  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Tools/gdomap.c: Fixed bug in handling '-a' option and enhanced
+	to support multicast probing of networks specified in '-a' file.
+
 2001-02-22  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Headers/gnustep/base/NSBundle.h: Added three new localization
